fix: keep header alignment steady through animation

--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -58,7 +58,6 @@ header {
 	border-image: linear-gradient(to right, red 0%, orange 20%, yellow 40%, green 60%, blue 80%, violet 100%);
 	border-image-slice: 0 0 1 0;
 	border: 0;
-	animation: 3s ease-out 1s 1 introHeader both;
 	//background-image: linear-gradient(#FFFFFF 0%, #F8F8F8 95%, rgba(238,238,238,0) 100%), linear-gradient(to right, red 0%, orange 20%, yellow 40%, green 60%, blue 80%, violet 100%);
 	&:before {
 		//background-image: linear-gradient(#2D3031 0%, #2D3031 95%, rgba(238,238,238,0) 100%), linear-gradient(to right, red 0%, orange 20%, yellow 40%, green 60%, blue 80%, violet 100%);
@@ -99,14 +98,6 @@ header {
 			text-shadow: none !important;
 			transition: color 0.5s linear;
 			color: darkgray;
-		}
-	}
-	@keyframes introHeader {
-		from {
-			text-align: center;
-		}
-		to {
-			text-align: left;
 		}
 	}
 	@keyframes introTitle {
